@@ -1,3 +1,8 @@
+2007-04-13  Xan Lopez  <xan.lopez@nokia.com>
+
+	* src/sapwood-draw.c: Add general positioning theming based on GTK+
+	"maemo-position-theming" style property.
+
 2007-04-02  Tommi Komulainen  <tommi.komulainen@nokia.com>
 
 	* demos/treeview.c (create_treeview): Enable rubberbanding only with
